--- a/lessons/Ch03 - Data Types.ipynb
+++ b/lessons/Ch03 - Data Types.ipynb
@@ -81,90 +81,92 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Example 1: check data type & general operations\n",
-    "a = 123\n",
-    "print( type(a) )   # type function returns data type of an object"
+    "***\n",
+    "# Notes pending on\n",
+    "- bool\n",
+    "- float\n",
+    "- complex\n",
+    "- strings\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "## Splice Notation\n",
+    "\n",
+    "Useful notation to extract specific elements from an ordered set (list, tuple, string).\n",
+    "\n",
+    "Splice Notation format **start-index \\[: end-index \\[: step-size\\] \\]**\n",
+    "\n",
+    "- Indexes are always zero based, i.e. index of first element is 0\n",
+    "- negative indexes represent elements from the end. -1 represent the last element in the ordered set.\n",
+    "- start-index is inclusive, and end-index is exclusive\n",
+    "- **step-size** has two components\n",
+    "    - direction:\n",
+    "        - positive step size indicates traversal from left to right\n",
+    "        - negative step size indicates traversal from right to left\n",
+    "    - jump:\n",
+    "        - offset to add/subtract to the previously selected elements index\n",
+    "        \n",
+    "\n",
+    "Some examples of splice notation\n",
+    "\n",
+    "- **a\\[2\\]** - retrieve element with index 2\n",
+    "- **a\\[2:\\]** - retrieve all elements starting from index 2 to the end\n",
+    "- **a\\[2:-2\\]** - substring from index 2 to the index -3\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1524157875323883675049535156256668194500838287337600975522511812231126352691000152415888766956267751562263087639079520012193273126047859425087639153757049236500533455762536198787501905199875019052100\n"
+      "index 0: A\n",
+      "index -1: E\n",
+      "substring [0:-1]: ABCD\n",
+      "substring last three characters: CDE\n",
+      "end index < start index & direction LTR : \n",
+      "end index < start index ^ direction RTL: CB\n",
+      "alternate characters LTR: ACE\n",
+      "alternate char.s RTL: ECA\n"
      ]
     }
    ],
    "source": [
-    "a = 1234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890\n",
-    "a = a ** 2\n",
-    "print(a)"
+    "s = 'ABCDE'\n",
+    "# fetch element at a specific index\n",
+    "print( f'index 0: {s[0]}' )\n",
+    "print( f'index -1: {s[-1]}' )\n",
+    "\n",
+    "# fetch substring starting from an index\n",
+    "print( f'substring [0:-1]: {s[0:-1]}')\n",
+    "\n",
+    "# interprets end index automatically\n",
+    "print( f'substring last three characters: {s[-3:]}' )\n",
+    "\n",
+    "# since end index is to the right of start index, \n",
+    "# and default direction is left to right returns an empty string\n",
+    "print( f'end index < start index & direction LTR : {s[2:0]}')\n",
+    "\n",
+    "# end index < start index & direction RTL\n",
+    "print( f'end index < start index ^ direction RTL: {s[2:0:-1]}' )\n",
+    "\n",
+    "# jumps bigger than one in LTR direction\n",
+    "print( f'alternate characters LTR: {s[0::2]}' )\n",
+    "\n",
+    "# jumps bigger than one in RTL direction\n",
+    "print( f'alternate char.s RTL: {s[-1::-2]}' )"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9223372036854775807"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sys.maxsize"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9223372036854775807"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sys.maxsize"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
