--- a/lessons/Ch03 - Data Types.ipynb
+++ b/lessons/Ch03 - Data Types.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -167,6 +167,122 @@
     "# jumps bigger than one in RTL direction\n",
     "print( f'alternate char.s RTL: {s[-1::-2]}' )"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "# Lists\n",
+    "\n",
+    "Lists in python are very versatile. A List can contain:\n",
+    "- any number of elements\n",
+    "- elements can be of different data types\n",
+    "- lists are mutable "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create a list \n",
+    "l = [1, 2, 3, 4, 5]\n",
+    "print( type(l) )\n",
+    "print( l )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "[1, True, 'hello', 12.3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# a list can contain any kind of elements\n",
+    "l = [1, True, 'hello', 12.3]\n",
+    "print( type(l) )\n",
+    "print( l )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 4, 3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# access list elements using splice notation\n",
+    "l = [1, 2, 3, 4, 5]\n",
+    "# reverse the elements of the list\n",
+    "print( l[::-1] )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4]\n",
+      "after appending 5: [1, 2, 3, 4, 5]\n",
+      "[1, 2, 3]\n",
+      "after extending with [4,5]: [1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get useful list methods using : dir( list )\n",
+    "# append, clear, copy, count, extend, index, insert, \n",
+    "# pop, remove, reverse, sort\n",
+    "\n",
+    "# append - one element at a time\n",
+    "l = [1, 2, 3, 4 ]\n",
+    "print( l )\n",
+    "l.append(5)\n",
+    "print( f'after appending 5: {l}' )\n",
+    "\n",
+    "# extend one list with another\n",
+    "l = [1, 2, 3]\n",
+    "print( l )\n",
+    "l.extend( [4, 5] )\n",
+    "print( f'after extending with [4,5]: {l}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
