bool section added

--- a/lessons/Ch03 - Data Types.ipynb
+++ b/lessons/Ch03 - Data Types.ipynb
@@ -85,8 +85,85 @@
    "metadata": {},
    "source": [
     "***\n",
+    "### bool\n",
+    "\n",
+    "Represents boolean values **True** and **False**. Comparison and memebership check operations evaluate to boolean."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'bool'>\n",
+      "<class 'bool'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# chek type of bool variable\n",
+    "print( type( True) )\n",
+    "print( type( False) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# comparison operators evaluate to bool\n",
+    "print( 3 > 2  )\n",
+    "print( 3 <= 2 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "0\n",
+      "2\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# bools are int under the hood: True = 1, and False = 0\n",
+    "# But to make your programs readable, always use True and False\n",
+    "# never use 0 and 1\n",
+    "print( int(True) )\n",
+    "print( int(False) )\n",
+    "\n",
+    "print( True + True )\n",
+    "print( False + False )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "\n",
     "# Notes pending on\n",
-    "- bool\n",
     "- float\n",
     "- complex\n",
     "- strings\n",
@@ -183,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -275,6 +352,393 @@
     "print( l )\n",
     "l.extend( [4, 5] )\n",
     "print( f'after extending with [4,5]: {l}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [1,2,3]\n",
+    "print( l )\n",
+    "l.clear()\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [1,2,2,3,3,3]\n",
+    "print( l.count(1))\n",
+    "print( l.count(3))\n",
+    "print( l.count( -100 ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 2, 1]\n",
+      "None\n",
+      "[3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [1, 2, 3]\n",
+    "print( l[::-1] )\n",
+    "print( l.reverse() )\n",
+    "print( l )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l = [1,2,3]\n",
+    "m = [1,2,3]\n",
+    "l.reverse()\n",
+    "\n",
+    "l == m[::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 exists: True\n",
+      "9 exists: False\n",
+      "9 does not exist: True\n",
+      "size: 3\n",
+      "empty list size: 0\n",
+      "sum of the list: 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# built in methods\n",
+    "# in, not in, len, sum\n",
+    "l = [1, 2, 3]\n",
+    "\n",
+    "print( f'1 exists: {1 in l}')\n",
+    "print( f'9 exists: {9 in l}')\n",
+    "\n",
+    "print( f'9 does not exist: {9 not in l}')\n",
+    "\n",
+    "print( f'size: {len(l)}')\n",
+    "print( f'empty list size: {len([])}')\n",
+    "\n",
+    "print( f'sum of the list: {sum(l)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "[1, 2, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [1, 2, 3]\n",
+    "print (l)\n",
+    "l[-1] = 9\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 1, 2, 3, 4]\n",
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [1, 2, 3, 4]\n",
+    "#l[0:2] = [3,4,5]\n",
+    "#l[0:-10] = [1,2, 3, 4, 5, 6, 7]\n",
+    "l[-10:0] = [1,2, 3, 4, 5, 6, 7]\n",
+    "print(l)\n",
+    "print( len(l) )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "[1, 2]\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list assignment index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-45-87703661e54b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0ml\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0ml\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0ml\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0ml\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list assignment index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "l = [1,2,3]\n",
+    "print( l.pop() )\n",
+    "print( l )\n",
+    "l[2] = 3\n",
+    "print( l )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n",
+      "(1, 2, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = (1,2, 3)\n",
+    "print( type(t) )\n",
+    "print( t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 2, 1)"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t[::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-55-9a6f3bfc01f7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mt\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m9\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "t[0] = 9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print( type( (1) ) )\n",
+    "print( type( ('abc') ) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# single element tuples\n",
+    "print( type( (1,) ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'set'>\n",
+      "{1, 2, 3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# sets\n",
+    "s = {1, 2, 3}\n",
+    "print( type(s) )\n",
+    "print( s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 in s: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print( f'1 in s: {1 in s}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "union: {1, 2, 3, 4, 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# union\n",
+    "s1 = {1,2,3}\n",
+    "s2 = {3,4,5}\n",
+    "print( f'union: {s1.union(s2)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "list in: True\n",
+      "CPU times: user 683 µs, sys: 1.1 ms, total: 1.79 ms\n",
+      "Wall time: 2.37 ms\n",
+      "tuple in: True\n",
+      "CPU times: user 66 µs, sys: 37 µs, total: 103 µs\n",
+      "Wall time: 98.9 µs\n",
+      "set in: True\n",
+      "CPU times: user 35 µs, sys: 14 µs, total: 49 µs\n",
+      "Wall time: 42.9 µs\n"
+     ]
+    }
+   ],
+   "source": [
+    "# dictionaries\n",
+    "l = list( range(0, 100000000) )\n",
+    "t = tuple( range(0, 100000000) )\n",
+    "s = set( range(0, 100000000) )\n",
+    "%time print( f'list in: {5400 in l}')\n",
+    "%time print( f'tuple in: {5400 in t}')\n",
+    "%time print( f'set in: {5400 in s}')"
    ]
   },
   {
