float section added

--- a/lessons/Ch03 - Data Types.ipynb
+++ b/lessons/Ch03 - Data Types.ipynb
@@ -92,18 +92,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'bool'>\n",
-      "<class 'bool'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# chek type of bool variable\n",
     "print( type( True) )\n",
@@ -112,18 +103,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# comparison operators evaluate to bool\n",
     "print( 3 > 2  )\n",
@@ -132,20 +114,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "0\n",
-      "2\n",
-      "0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# bools are int under the hood: True = 1, and False = 0\n",
     "# But to make your programs readable, always use True and False\n",
@@ -162,10 +133,148 @@
    "metadata": {},
    "source": [
     "***\n",
+    "## Real numbers\n",
+    "\n",
+    "Real numbers are represented using **float** data type. Unlike in Java, C, C++ etc., Python has only one data type to represent real numbers, that is **float**.\n",
+    "\n",
+    "**Size limitations**:\n",
+    "- interger part has no size restrictions (just like **int**s)\n",
+    "- real part has size restriction (around 15 digits)\n",
+    "\n",
+    "**Notations**:\n",
+    "- normal notation: 1.23, -12.3 etc\n",
+    "- engineering notation: $\\mathbf{\\{number\\} \\; e \\pm \\{power\\}}$\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'float'>\n",
+      "12.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# type of floating numbers\n",
+    "print( type( 12.3 ) )\n",
+    "print( 12.3 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.12345678901234568\n"
+     ]
+    }
+   ],
+   "source": [
+    "# real part has size restrictions\n",
+    "# temperature has 30 digit real part\n",
+    "temperature = 0.123456789012345678901234567890\n",
+    "# notice that temperature only retains 17 real digits\n",
+    "print( temperature )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.3230572289118146e+196\n"
+     ]
+    }
+   ],
+   "source": [
+    "# int part of float number can be extremely large\n",
+    "\n",
+    "# 50 digit float\n",
+    "number = 12345678901234567890123456789012345678901234567890.\n",
+    "# 4th power generates a 197 digit float number\n",
+    "print( number ** 4)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "plain float format: 123.45\n",
+      "enginnering positive power: 123.45\n",
+      "enginnering negative power: 123.45\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Engineering notation\n",
+    "\n",
+    "# same number in plain float, and two different engineering formats\n",
+    "number = 123.45\n",
+    "number_eng_positive = 1.2345e+2\n",
+    "number_eng_negative = 12345e-2\n",
+    "\n",
+    "print( f'plain float format: {number}' )\n",
+    "print( f'enginnering positive power: {number_eng_positive}' )\n",
+    "print( f'enginnering negative power: {number_eng_negative}' )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "## Complex numbers\n",
+    "\n",
+    "A Complex number has both a real part and an imaginary part. They are represented with $\\mathbf{z = a + ib}$. Python has **complex** data type to support these numbers. Complex number format is: $\\mathbf{a \\pm bj}$ (note python uses **j** to denote imaginary part of the complex number)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'complex'>\n",
+      "(3+4j)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get type of complex number\n",
+    "print( type( 3+4j) )\n",
+    "# Note: 3 + 4j is valid, but not 3 + j4\n",
+    "print( 3+4j )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
     "\n",
     "# Notes pending on\n",
-    "- float\n",
-    "- complex\n",
     "- strings\n",
     "***"
    ]
@@ -201,24 +310,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "index 0: A\n",
-      "index -1: E\n",
-      "substring [0:-1]: ABCD\n",
-      "substring last three characters: CDE\n",
-      "end index < start index & direction LTR : \n",
-      "end index < start index ^ direction RTL: CB\n",
-      "alternate characters LTR: ACE\n",
-      "alternate char.s RTL: ECA\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "s = 'ABCDE'\n",
     "# fetch element at a specific index\n",
@@ -260,18 +354,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'list'>\n",
-      "[1, 2, 3, 4, 5]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# create a list \n",
     "l = [1, 2, 3, 4, 5]\n",
@@ -281,18 +366,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'list'>\n",
-      "[1, True, 'hello', 12.3]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# a list can contain any kind of elements\n",
     "l = [1, True, 'hello', 12.3]\n",
@@ -302,17 +378,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[5, 4, 3, 2, 1]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# access list elements using splice notation\n",
     "l = [1, 2, 3, 4, 5]\n",
@@ -322,20 +390,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3, 4]\n",
-      "after appending 5: [1, 2, 3, 4, 5]\n",
-      "[1, 2, 3]\n",
-      "after extending with [4,5]: [1, 2, 3, 4, 5]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# get useful list methods using : dir( list )\n",
     "# append, clear, copy, count, extend, index, insert, \n",
@@ -356,18 +413,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3]\n",
-      "[]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "l = [1,2,3]\n",
     "print( l )\n",
@@ -377,19 +425,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "3\n",
-      "0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "l = [1,2,2,3,3,3]\n",
     "print( l.count(1))\n",
@@ -399,19 +437,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[3, 2, 1]\n",
-      "None\n",
-      "[3, 2, 1]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "l = [1, 2, 3]\n",
     "print( l[::-1] )\n",
@@ -421,20 +449,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "l = [1,2,3]\n",
     "m = [1,2,3]\n",
@@ -445,22 +462,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 exists: True\n",
-      "9 exists: False\n",
-      "9 does not exist: True\n",
-      "size: 3\n",
-      "empty list size: 0\n",
-      "sum of the list: 6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# built in methods\n",
     "# in, not in, len, sum\n",
@@ -479,18 +483,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3]\n",
-      "[1, 2, 9]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "l = [1, 2, 3]\n",
     "print (l)\n",
@@ -500,18 +495,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3, 4, 5, 6, 7, 1, 2, 3, 4]\n",
-      "11\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "l = [1, 2, 3, 4]\n",
     "#l[0:2] = [3,4,5]\n",
@@ -523,29 +509,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n",
-      "[1, 2]\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list assignment index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-45-87703661e54b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0ml\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0ml\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0ml\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0ml\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: list assignment index out of range"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "l = [1,2,3]\n",
     "print( l.pop() )\n",
@@ -556,18 +522,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'tuple'>\n",
-      "(1, 2, 3)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "t = (1,2, 3)\n",
     "print( type(t) )\n",
@@ -576,59 +533,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3, 2, 1)"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "t[::-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'tuple' object does not support item assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-55-9a6f3bfc01f7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mt\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m9\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "t[0] = 9"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'int'>\n",
-      "<class 'str'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print( type( (1) ) )\n",
     "print( type( ('abc') ) )"
@@ -636,17 +561,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'tuple'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# single element tuples\n",
     "print( type( (1,) ))"
@@ -654,18 +571,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'set'>\n",
-      "{1, 2, 3}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# sets\n",
     "s = {1, 2, 3}\n",
@@ -675,34 +583,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 in s: True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print( f'1 in s: {1 in s}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "union: {1, 2, 3, 4, 5}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# union\n",
     "s1 = {1,2,3}\n",
@@ -712,25 +604,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "list in: True\n",
-      "CPU times: user 683 µs, sys: 1.1 ms, total: 1.79 ms\n",
-      "Wall time: 2.37 ms\n",
-      "tuple in: True\n",
-      "CPU times: user 66 µs, sys: 37 µs, total: 103 µs\n",
-      "Wall time: 98.9 µs\n",
-      "set in: True\n",
-      "CPU times: user 35 µs, sys: 14 µs, total: 49 µs\n",
-      "Wall time: 42.9 µs\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# dictionaries\n",
     "l = list( range(0, 100000000) )\n",
